# flow_map_visualization

./: CMakeLists.txt  main.cpp
data/: flow_map_00.raw  flow_map_01.raw  flow_map_02.raw  flow_map_03.raw  flow_map_04.raw  flow_map_05.raw  flow_map_06.raw  flow_map_07.raw  flow_map_08.raw  flow_map_09.raw  flow_map_10.raw
utils/: CMakeLists.txt  callbacks.h  embedded_colormaps.h  parse_arguments.cpp  parse_arguments.h  points_loader.cpp  points_loader.h  widget.cpp  widget.h
